Version 4.10.0  unreleased

    * Bump up to AppEngine v1.9.17a and CedarBuild v0.8.12.

Version 4.9.2   08 Nov 2014

    * Document that this version of CedarCommon is compatible only with GWT v2.5 and v2.6.
    * Bump up to AppEngine v1.9.15, since this will be one of the last releases of v4.x.

Version 4.9.1   28 Oct 2014

    * Fix rendering problems with tabs if a bookmark is the first action after login.

Version 4.9.0   23 Oct 2014

    * Add new filter GwtCacheControlFilter to standardize caching for GWT files.

Version 4.8.1   26 Sep 2014

    * Upgrade to CedarBuild v0.8.10, just to stay up-to-date with latest code.
    * Be more strict about using Mockito's isA() in unit tests rather than any().

Version 4.8.0   22 Sep 2014

    * Change standard log4j date format to include time zone.
    * Bump up to AppEngine v1.9.11, since v1.8.8 is getting kind of old.

Version 4.7.0   16 Jul 2014

    * Package the RichTextToolbar from GWT's showcase.

Version 4.6.0   11 Jul 2014

    * Package external UTCDateBox and UTCTimeBox from Traction Software, to support Java 1.6.

Version 4.5.0   08 Jul 2014

    * Pull in SimplePager as external code to change private variables to protected.
    * Improve DataTablePager so the last page icon is disabled unless the page count is known.

Version 4.4.0   23 May 2014

    * Add constructors to InvalidDataException so we can provide both details and cause.
    * Improve validation handling within JaxbUtils, now throwing InvalidDataException.

Version 4.3.4   21 May 2014

    * Add new method JaxbUtils.generateSchema().
    * Add new method JaxbUtils.marshalDocument() that takes a schema location.

Version 4.3.3   17 May 2014

    * Add AbstractWidgetUtils.getUrl() to tie button clicks to URLs.
    * Deprecate Base64Coder, since there are lots of alternatives to this code.
    * Change SerializationUtils to use Base64 from commons-codec.

Version 4.3.2   06 May 2014
